objects/ortoo_qra__Assignment_Group__c.object
<CustomObject>
    <description>Assignment group</description>
    <fields>
        <fullName>ortoo_qra__ARC_Filter_Logic__c</fullName>
        <label>ARC Filter Logic</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ortoo_qra__ARC_Prepared_Form__c</fullName>
        <label>ARC Prepared Form</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ortoo_qra__Active_Only_Outside_Working_Hours__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Active Only Outside Working Hours</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ortoo_qra__Active_Records_Only__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Active records only</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ortoo_qra__Active_Records__c</fullName>
        <label>Active Records</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ortoo_qra__Active_Status_Field__c</fullName>
        <label>Active Status Field</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ortoo_qra__Active_Statuses__c</fullName>
        <label>Active Statuses</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ortoo_qra__Activity_Timeout__c</fullName>
        <label>Activity Timeout</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ortoo_qra__Assign_To_Logged_In_Users__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Assign To Logged In Users</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ortoo_qra__Assignment_Method2__c</fullName>
        <label>Assignment Method2</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>FIFO / Ascending</fullName>
                </value>
                <value>
                    <fullName>LIFO / Descending</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ortoo_qra__Assignment_Method3__c</fullName>
        <label>Assignment Method3</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>FIFO / Ascending</fullName>
                </value>
                <value>
                    <fullName>LIFO / Descending</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ortoo_qra__Assignment_Method_Basis2__c</fullName>
        <label>Assignment Method Basis2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ortoo_qra__Assignment_Method_Basis3__c</fullName>
        <label>Assignment Method Basis3</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ortoo_qra__Assignment_Method_Basis__c</fullName>
        <label>Assignment Method Basis</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>LastModifiedDate</fullName>
                    <default>true</default>
                    <label>LastModifiedDate</label>
                </value>
                <value>
                    <fullName>CreatedDate</fullName>
                </value>
                <value>
                    <fullName>Q_assign_Custom_Seq__c</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ortoo_qra__Assignment_Method__c</fullName>
        <label>Assignment Method</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>FIFO / Ascending</fullName>
                    <default>true</default>
                    <label>FIFO / Ascending</label>
                </value>
                <value>
                    <fullName>LIFO / Descending</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ortoo_qra__Assignment_Mode__c</fullName>
        <label>Assignment Mode</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Round Robin</fullName>
                    <default>true</default>
                    <label>Round Robin</label>
                </value>
                <value>
                    <fullName>Load Balanced</fullName>
                </value>
                <value>
                    <fullName>Load Balanced + Selection Criteria</fullName>
                </value>
                <value>
                    <fullName>Points Based - Highest Points</fullName>
                </value>
                <value>
                    <fullName>Points Based - Lowest Points</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ortoo_qra__Assignment_Quota__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Assignment Quota</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ortoo_qra__Assignment_Sequence__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Assignment Sequence</label>
        <precision>11</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ortoo_qra__Assignments_Level__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Assignments level</description>
        <label>Max Assignment Cap</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ortoo_qra__Business_Hours_Schedule__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Business Hours Schedule</label>
        <referenceTo>BusinessHours</referenceTo>
        <relationshipName>QA_Assignment_Groups</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ortoo_qra__Comply_With_Cap__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Comply With Cap</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ortoo_qra__Comply_With_Quota__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Comply With Quota</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ortoo_qra__Description__c</fullName>
        <description>Description</description>
        <label>Description</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ortoo_qra__Global_Assignment_Quota_Period__c</fullName>
        <label>Global Assignment Quota Period</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Hourly</fullName>
                </value>
                <value>
                    <fullName>Daily</fullName>
                    <default>true</default>
                    <label>Daily</label>
                </value>
                <value>
                    <fullName>Weekly</fullName>
                </value>
                <value>
                    <fullName>Monthly</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ortoo_qra__Global_Assignment_Quota__c</fullName>
        <label>Global Assignment Quota</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ortoo_qra__Is_Active__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Enabled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ortoo_qra__Last_Assignment_Date__c</fullName>
        <inlineHelpText>Date Time when this group last processed through schedular</inlineHelpText>
        <label>Last Assignment Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ortoo_qra__Load_Points_Field__c</fullName>
        <label>Load Points Field</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ortoo_qra__Match_Field__c</fullName>
        <label>Match Field</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ortoo_qra__Matching_Rule_Filter_Logic__c</fullName>
        <description>Stores filter logic for matching rules.</description>
        <label>Matching Rule Filter Logic</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ortoo_qra__Max_Assignment_Points_Cap__c</fullName>
        <label>Max Load Points Cap</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ortoo_qra__Object_Owner_Field__c</fullName>
        <description>This field is used to store API name of the object&apos;s field that is populated with the Id of the user when assignment happens. It defaults to OwenrId (built-in) field of object. Users can specify what field to use as &quot;Owner&quot;.</description>
        <inlineHelpText>This field is used to store API name of the object&apos;s field that is populated with the Id of the user when assignment happens. It defaults to OwenrId (built-in) field of object. Users can specify what field to use as &quot;Owner&quot;.</inlineHelpText>
        <label>Object Owner Field</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ortoo_qra__Object_Prefix__c</fullName>
        <description>Object prefix</description>
        <label>Object Prefix</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ortoo_qra__Override_Assign_Config__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Override Assign Config</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ortoo_qra__Override_Object_Settings__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Override Object Settings</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ortoo_qra__Point_Score_Threshold__c</fullName>
        <label>Point Score Threshold</label>
        <length>16</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ortoo_qra__Process_Members_Records__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Process Members Records</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ortoo_qra__Processing_Order__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Processing Order</label>
        <precision>11</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ortoo_qra__Processing_Type__c</fullName>
        <label>Processing Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Push</fullName>
                    <default>true</default>
                    <label>Push</label>
                </value>
                <value>
                    <fullName>Pull</fullName>
                </value>
                <value>
                    <fullName>Push + Pull</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ortoo_qra__QSC_Filter_Logic__c</fullName>
        <label>QSC Filter Logic</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ortoo_qra__QSC_Prepared_Form__c</fullName>
        <label>QSC Prepared Form</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ortoo_qra__Queue_Id__c</fullName>
        <label>Queue Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ortoo_qra__Queue_Type__c</fullName>
        <label>Queue Type</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ortoo_qra__Records_Processed__c</fullName>
        <label>Records Processed</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ortoo_qra__Records_Selected_From_Queue__c</fullName>
        <label>Records Selected From Queue</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ortoo_qra__Refresh_Time__c</fullName>
        <inlineHelpText>Auto refresh time (in seconds) for Assignment Group members page.</inlineHelpText>
        <label>Refresh Time</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ortoo_qra__Round_Robin_Quota_Period__c</fullName>
        <label>Quota Period</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Daily</fullName>
                </value>
                <value>
                    <fullName>Weekly</fullName>
                </value>
                <value>
                    <fullName>Monthly</fullName>
                </value>
                <value>
                    <fullName>Hourly</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ortoo_qra__Rule_Imported__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Rule Imported</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ortoo_qra__Rules_Type__c</fullName>
        <label>Rules Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Follow Me</fullName>
                    <default>true</default>
                    <label>Follow Me</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ortoo_qra__Run_Matching_Rules_Only__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Run Matching Rules Only</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ortoo_qra__Show_Pull_Button__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Show Pull Button</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ortoo_qra__This_Distribution_Group_only__c</fullName>
        <defaultValue>false</defaultValue>
        <label>This Distribution Group only</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ortoo_qra__Time_Unit__c</fullName>
        <label>Time Unit</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Minutes</fullName>
                </value>
                <value>
                    <fullName>Hours</fullName>
                </value>
                <value>
                    <fullName>Days</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ortoo_qra__Units_Of_Time__c</fullName>
        <label>Units Of Time</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ortoo_qra__Update_Field__c</fullName>
        <label>Update Field</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ortoo_qra__Update_Value__c</fullName>
        <label>Update Value</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ortoo_qra__User_Id__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User Id</label>
        <referenceTo>User</referenceTo>
        <relationshipName>QA_Assignment_Groups</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ortoo_qra__Working_Hours_Schedule__c</fullName>
        <label>Working_Hours_Schedule</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <label>Assignment Group</label>
    <listViews>
        <fullName>ortoo_qra__All</fullName>
        <columns>NAME</columns>
        <columns>ortoo_qra__Is_Active__c</columns>
        <columns>ortoo_qra__Processing_Order__c</columns>
        <columns>ortoo_qra__Processing_Type__c</columns>
        <columns>ortoo_qra__Assignment_Mode__c</columns>
        <columns>ortoo_qra__Round_Robin_Quota_Period__c</columns>
        <columns>ortoo_qra__Assignments_Level__c</columns>
        <columns>ortoo_qra__Assignment_Quota__c</columns>
        <columns>ortoo_qra__Global_Assignment_Quota__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Group Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>QA Assignment Groups</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>